Fix uneven spacing between project elements

--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,6 @@ li {
 }
 
 .project-container {
-  flex: 1 2 auto;
   min-width: 300px;
   height: 300px;
   justify-content: flex-start;
